core-concepts-fix

--- a/src/content/docs/en/pages/main-menu/before-begin/azion-core-concepts.mdx
+++ b/src/content/docs/en/pages/main-menu/before-begin/azion-core-concepts.mdx
@@ -1,16 +1,20 @@
 ---
-title: Azion core concepts
+title: Core concepts
 description: Find some terms and concpets to understand Azion's basics.
 meta_tags: azion, edge computing, platform
 namespace: documentation_azion_core_concepts
-permalink: /documentation/products/azion-core-concepts/
+permalink: /documentation/products/core-concepts/
 ---
 
 ## What's edge computing?
 
 **Edge computing** is a highly-distributed computing paradigm that aims to bring computation and data storage closer to the location where it's needed, typically near the "edge" of the network. It enables the building and management of [modern applications](/en/documentation/products/guides/build/overview/) able to meet the growing demand for real-time processing, reduced latency, improved data privacy, and the ability to handle the massive amount of data generated nowadays.
 
-Following these principles, an **edge-native platform** must be designed to operate efficiently at the edge of a network. For this reason, the platform should possess several key characteristics and functionalities to meet the unique challenges and requirements of edge computing:
+---
+
+## What's an edge-native platform?
+
+Following edge computing principles, an **edge-native platform** must be designed to operate efficiently at the edge of a network. For this reason, the platform should possess several key characteristics and functionalities to meet the unique challenges and requirements of edge computing:
 
 - Seamless experience for application development, security, orchestration, and observability.
 - NoOps and self-service approach.
