--- a/src/content/docs/en/pages/main-menu/get-started/get-started.mdx
+++ b/src/content/docs/en/pages/main-menu/get-started/get-started.mdx
@@ -20,7 +20,7 @@ This documentation page will help you start your [Azion's journey](#azions-journ
 
 If you're looking for more information on edge computing and Azion's core concepts, take some time to explore the dedicated documentation:
 
-<Button href="/en/documentation/products/azion-core-concepts/" text="Go to Azion core concepts" variant="secondary"> 
+<Button href="/en/documentation/products/core-concepts/" text="Go to the core concepts" variant="secondary"> 
 
 </Button>
 
