core-concepts-fix

--- a/src/content/docs/en/pages/main-menu/before-begin/core-concepts.mdx
+++ b/src/content/docs/en/pages/main-menu/before-begin/core-concepts.mdx
@@ -6,6 +6,8 @@ namespace: documentation_azion_core_concepts
 permalink: /documentation/products/core-concepts/
 ---
 
+This documentation will introduce you to the core concepts related to an efficient and decentralized computation at the edge of the network, as well as Azion's principles to understand and manage the platform. 
+
 ## What's edge computing?
 
 **Edge computing** is a highly-distributed computing paradigm that aims to bring computation and data storage closer to the location where it's needed, typically near the "edge" of the network. It enables the building and management of [modern applications](/en/documentation/products/guides/build/overview/) able to meet the growing demand for real-time processing, reduced latency, improved data privacy, and the ability to handle the massive amount of data generated nowadays.
