--- a/src/content/docs/en/pages/main-menu/work-with-domains/create-certificate.mdx
+++ b/src/content/docs/en/pages/main-menu/work-with-domains/create-certificate.mdx
@@ -7,9 +7,7 @@ permalink: /documentation/products/guides/create-a-digital-certificate/
 ---
 import Button from '~/components/Button.astro'
 
-If your application runs on HTTPS, you'll need a **digital certificate**. A TLS digital certificate confirms a website's identity and protects data transfers. It secures financial transactions and any exchange of sensitive information, from login credentials to personal data.
-
-<Button href="/en/documentation/products/edge-application/digital-certificates/" variant="secondary" text="Go to Digital Certificates documentation"></Button>
+If your application runs on HTTPS, you'll need to register a certificate with Azion [Digital Certificates](/pt-br/documentation/products/edge-application/digital-certificates/). A TLS digital certificate confirms a website's identity and protects data transfers. It secures financial transactions and any exchange of sensitive information, from login credentials to personal data.
 
 :::note
 You can also request that a **Let's Encrypt certificate** be generated for your domain through Azion. The process for requesting a Let's Encrypt certificate is different from custom certificates. See [how to generate a Let's Encrypt certificate](/en/documentation/products/guides/how-to-generate-a-lets-encrypt-certificate/) for more information.
@@ -54,7 +52,7 @@ curl --location 'https://api.azionapi.net/digital_certificates' \
 --header 'Content-Type: application/json' \
 --header 'Authorization: Token [TOKEN VALUE]' \
 --data '{
-    "name": "example.com - certificate",
+    "name": "CERT yourdomain.com",
     "certificate": "-----BEGIN CERTIFICATE-----\n<your_private_key>\n-----END CERTIFICATE-----",
     "private_key": "-----BEGIN RSA PRIVATE KEY-----\n<your_private_key>\n-----END RSA PRIVATE KEY-----"
 }'
@@ -78,7 +76,7 @@ curl --location 'https://api.azionapi.net/digital_certificates' \
 --header 'Authorization: Token [TOKEN VALUE]' \
 --header 'Content-Type: application/json' \
 --data '{
-    "name": "Trusted CA for yourdomain.com",
+    "name": "TCA yourdomain.com",
     "certificate": "-----BEGIN CERTIFICATE-----\n<your_trusted_ca_certificate>\n-----END CERTIFICATE-----",
     "certificate_type": "trusted_ca_certificate"
 }'
@@ -95,7 +93,7 @@ curl --location 'https://api.azionapi.net/digital_certificates' \
 {
     "results": {
         "id": <digital_certificate_id>,
-        "name": "Certificate for yourdomain.com",
+        "name": "CERT yourdomain.com",
         "issuer": "",
         "subject_name": [],
         "validity": "2028-03-24 20:09:00-03:00",
