--- a/src/content/docs/en/pages/main-menu/work-with-domains/configure-domains.mdx
+++ b/src/content/docs/en/pages/main-menu/work-with-domains/configure-domains.mdx
@@ -7,14 +7,7 @@ permalink: /documentation/products/guides/configure-a-domain/
 ---
 import Button from '~/components/Button.astro'
 
-With Azion, you can create and run applications directly on the edge. To enable access to your application via a browser and start receiving users and tracking metrics, you'll need a domain. Azion supplies a complimentary Azion domain address, in the format `xxxxxxxxxx.map.azionedge.net`. When users access your application through this Azion domain, their browser seeks out the closest edge node within Azion's network to find the associated edge application.
-
-<Button href="/documentation/products/edge-application/domains/" variant="secondary" text="Go to Domains documentation"></Button>
-
-Before you create your Azion domain, you must have:
-
-- An Azion [account and credentials](/en/documentation/products/accounts/creating-account/).
-- An [edge application](/en/documentation/products/guides/build/overview/).
+With Azion, you can create and run applications directly on the edge. To allow access to your application through the browser and start receiving users and monitoring metrics, you need a domain. With [Domains](/documentation/products/edge-application/domains/), Azion provides a free domain address in the format `xxxxxxxxxx.map.azionedge.net`. When users access your application through this Azion domain, the nearest node within the edge network fetches and delivers the edge application.
 
 :::tip
 Don't have an edge application? [Build with edge application](/en/documentation/products/guides/build/build-with-edge-application/) or [check the available templates](/en/documentation/products/start-with-a-template/).
