--- a/src/content/docs/en/pages/build-journey/develop-with-azion/frameworks/framework-angular.mdx
+++ b/src/content/docs/en/pages/build-journey/develop-with-azion/frameworks/framework-angular.mdx
@@ -7,12 +7,7 @@ permalink: /documentation/products/build/develop-with-azion/frameworks-specific/
 menu_namespace: buildMenu
 ---
 
-Angular is an open-source web framework designed with an emphasis on speed and suitability for websites that contain substantial content, such as:
-
-- Landing pages
-- Blogs
-- Technical documentation
-- Similar online platforms
+Angular is an open-source web framework designed with an emphasis on speed and suitability for websites that contain substantial content
 
 Learn more about [Angular](https://angular.io/docs).
 
