--- a/src/content/docs/en/pages/main-menu/work-with-domains/point-domain.mdx
+++ b/src/content/docs/en/pages/main-menu/work-with-domains/point-domain.mdx
@@ -115,7 +115,7 @@ Some providers allow you to add a wildcard (`*`) subdomain instead of a specific
 
 5. Don't forget to save your settings.
 
-Note that there might be a delay in propagation time when you access your application. If that's the case, [you can run the dig command](lin_dig_command_howto) in your terminal to check the DNS records of your edge node. For example:
+Note that there might be a delay in propagation time when you access your application. If that's the case, [you can run the dig command](/en/documentation/products/guides/run-the-dig-command/) in your terminal to check the DNS records of your edge node. For example:
 
 ```bash
 dig +short yourdomain.org @200.0.0.0
