--- a/src/content/docs/en/pages/main-menu/before-begin/core-concepts.mdx
+++ b/src/content/docs/en/pages/main-menu/before-begin/core-concepts.mdx
@@ -1,6 +1,6 @@
 ---
 title: Core concepts
-description: Find some terms and concpets to understand Azion's basics.
+description: Find some terms and concepts to understand Azion's basics.
 meta_tags: azion, edge computing, platform
 namespace: documentation_azion_core_concepts
 permalink: /documentation/products/core-concepts/
