--- a/src/content/docs/en/pages/main-menu/before-begin/core-concepts.mdx
+++ b/src/content/docs/en/pages/main-menu/before-begin/core-concepts.mdx
@@ -48,7 +48,7 @@ Azion's platform enables you to handle each step in the process of building and 
 
 ---
 
-## How Azion Edge Platform works
+## How Azion Edge Platform attends a request
 
 **Azion Edge Platform** is build over a robust infrastructure composed of various key components, as well as business logic and rules that allow for offering a reliable, scalable, and high-performance service.
 
