--- a/src/content/docs/en/pages/build-journey/overview/overview.mdx
+++ b/src/content/docs/en/pages/build-journey/overview/overview.mdx
@@ -10,11 +10,9 @@ permalink: /documentation/products/guides/build/overview/
 
 import Button from '~/components/Button.astro'
 
-Welcome to Azion Build products - your gateway to harnessing the power of edge computing for your web applications. 
+Azion Build products are your starting point for utilizing the power of edge computing in your applications.
 
-**Edge Application** is an Azion product tailored to elevate your applications through the power of edge computing. With it, you can build applications nearer to end-users, offering low-latency processing at the edge.
-
-Through reverse-proxy architecture, Edge Application processes user requests at the edge of the network. By directing requests to origin servers and utilizing edge caching capabilities, following requests can access data cached at the network edge, decentralizing storage and optimizing data transfer rates and efficiency. You can also transfer the processing of origin responses to the edge. This scalability allows you to adapt to growing traffic demands without over-loading your infrastructure and reducing maintenance costs.
+**Edge Application** allows you to build applications closer to end users, offering low latency processing at the edge. When you build an edge application, you can determine the origin of your content and configure the domain that will be used to deliver your application to end users. Through the reverse proxy architecture, the edge processes user requests and maintains cached data, decentralizing object storage and optimizing data transfer rates and efficiency. This scalability allows you to adapt to the growth of traffic demand without overloading your infrastructure and reducing maintenance costs.
 
 <Button href="/en/documentation/products/edge-foundations/what-edge-computing-is/" variant="secondary" text="Go to Edge Foundations"></Button>
 
