dev with azion adjustments

--- a/src/content/docs/en/pages/build-journey/develop-with-azion/frameworks/framework-astro.mdx
+++ b/src/content/docs/en/pages/build-journey/develop-with-azion/frameworks/framework-astro.mdx
@@ -21,6 +21,7 @@ Before getting started, you must have:
 - [The latest version of Azion CLI installed](/en/documentation/products/azion-cli/overview/).
 - Code editor.
 - Access to the terminal.
+- Node.js >= 18.
 
 ---
 
@@ -41,13 +42,13 @@ Before getting started, you must have:
 Output: 
 
 ```sh
-Getting modes available
+Getting templates available
 ```
 
 3. Choose the Astro template: 
 
 ```sh 
-Getting modes available? Choose a template for your project: (Use arrow keys)
+Getting templates available? Choose a template for your project: (Use arrow keys)
   Angular 
  ❯Astro 
   Hexo 
@@ -67,8 +68,8 @@ Do you want to start a local development server? (y/N)
 
 The following steps are based on the answer you gave. 
 
-- [If you chose to have a local development server running]().
-- [If you chose not to have a local development server running]().
+- [If you chose to have a local development server running](/en/documentation/products/build/develop-with-azion/frameworks-specific/astro/#answering-yes-to-local-dev).
+- [If you chose not to have a local development server running](/en/documentation/products/build/develop-with-azion/frameworks-specific/astro/#answering-no-to-local-dev).
 
 ### Answering yes to local dev
 
