--- a/src/content/docs/en/pages/build-journey/develop-with-azion/frameworks/framework-next.mdx
+++ b/src/content/docs/en/pages/build-journey/develop-with-azion/frameworks/framework-next.mdx
@@ -15,6 +15,7 @@ Before getting started, you must have:
 - [The latest version of Azion CLI installed](/documentation/products/azion-cli/overview/).
 - Code editor.
 - Access to the terminal.
+- Node.js >= 18.
 
 ---
 
@@ -35,7 +36,7 @@ Before getting started, you must have:
 Output: 
 
 ```sh
-Getting modes available
+Getting templates available
 ```
 
 3. Choose the Next template: 
@@ -69,8 +70,8 @@ Do you want to start a local development server? (y/N)
 
 The following steps are based on the answer you gave. 
 
-- [If you chose to have a local development server running]().
-- [If you chose not to have a local development server running]().
+- [If you chose to have a local development server running](/en/documentation/products/build/develop-with-azion/frameworks-specific/next/#answering-yes-to-local-dev).
+- [If you chose not to have a local development server running](/en/documentation/products/build/develop-with-azion/frameworks-specific/next/#answering-no-to-local-dev).
 
 ### Answering yes to local dev
 
