--- a/src/content/docs/en/pages/build-journey/develop-with-azion/frameworks/framework-overview.mdx
+++ b/src/content/docs/en/pages/build-journey/develop-with-azion/frameworks/framework-overview.mdx
@@ -16,7 +16,7 @@ This shift not only accelerates website loading times but also enhances security
 
 ## Vulcan
 
-[Vulcan](https://github.com/aziontech/vulcan) is a powerful tool designed to streamline the development and deployment of JavaScript applications and frameworks. This powerful utility automates polyfills for Edge Computing, significantly simplifying the process of creating Workers, particularly for the Azion platform.
+[Vulcan](https://github.com/aziontech/vulcan) is a powerful, **open-source** tool designed to streamline the development and deployment of JavaScript applications and frameworks. This powerful **framework adapter** automates polyfills for Edge Computing, significantly simplifying the process of creating Workers, particularly for the Azion platform.
 
 One of the key highlights of Vulcan is its ability to establish an intuitive and efficient protocol for facilitating the creation of presets. This makes customization and adaptation to specific project needs even more accessible, providing developers with the necessary flexibility to optimize their applications effectively and efficiently.
 
@@ -30,12 +30,12 @@ The following table brings the frameworks that are adapted to the edge:
 | Framework | CLI | RTM |
 | --- | --- | --- |
 | Angular | [How to build with Angular](/en/documentation/products/build/develop-with-azion/frameworks-specific/angular/) | [Angular boilerplate](/en/documentation/products/guides/angular-boilerplate/) |
-| Astro | [How to build with Astro](/en/documentation/products/build/develop-with-azion/frameworks-specific/astro/) | [Astro boilerplate WIP]() |
-| Hexo | [How to build with Hexo](/en/documentation/products/build/develop-with-azion/frameworks-specific/hexo/)| [Hexo boilerplate WIP](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_zones) |
-| Next | [How to build with Next](/en/documentation/products/build/develop-with-azion/frameworks-specific/next/) | [Next boilerplate WIP](https://github.com/aziontech/terraform-provider-azion/blob/main/docs/data-sources/records.md)|
-| React | [How to build with React](/en/documentation/products/build/develop-with-azion/frameworks-specific/react/) | [React boilerplate WIP](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_dnssec)|
-| Vite | [How to build with Vite](/en/documentation/products/build/develop-with-azion/frameworks-specific/vite/)| [Vite boilerplate WIP](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/intelligent_dns_dnssec)|
-| Vue | [How to build with Vue](/en/documentation/products/build/develop-with-azion/frameworks-specific/vue/) | [Vue boilerplate WIP](https://registry.terraform.io/providers/aziontech/azion/latest/docs/data-sources/edge_application_edge_functions_instance)|
+| Astro | [How to build with Astro](/en/documentation/products/build/develop-with-azion/frameworks-specific/astro/) | [Astro boilerplate](https://www.azion.com/en/documentation/products/guides/astro-boilerplate/) |
+| Hexo | [How to build with Hexo](/en/documentation/products/build/develop-with-azion/frameworks-specific/hexo/)| - |
+| Next | [How to build with Next](/en/documentation/products/build/develop-with-azion/frameworks-specific/next/) | [Next boilerplate](https://www.azion.com/en/documentation/products/guides/nextjs-static-boilerplate/)|
+| React | [How to build with React](/en/documentation/products/build/develop-with-azion/frameworks-specific/react/) | [React boilerplate](https://www.azion.com/en/documentation/products/guides/react-boilerplate/)|
+| Vite | [How to build with Vite](/en/documentation/products/build/develop-with-azion/frameworks-specific/vite/)| - |
+| Vue | [How to build with Vue](/en/documentation/products/build/develop-with-azion/frameworks-specific/vue/) | [Vue boilerplate](https://www.azion.com/en/documentation/products/guides/vue-boilerplate/)|
 
 
 
