adjustments-runtime-node

--- a/src/content/docs/en/pages/azion-edge-runtime/compatibility/cells-node.mdx
+++ b/src/content/docs/en/pages/azion-edge-runtime/compatibility/cells-node.mdx
@@ -2,119 +2,601 @@
 title: Azion Edge Runtime and Node.js compatibility
 description: Azion Edge Runtime and Node.js compatibility
 meta_tags: edge, javascript
-namespace: documentation_products_cells_node
-permalink: documentation/products/compatibility/cells-node/
+namespace: documentation_products_azion_runtime_node
+permalink: documentation/products/azion-edge-runtime/compatibility/node/
 menu_namespace: runtimeMenu
 ---
 
-The compatibility between Azion Runtime and Node.js is an ongoing task, but a set of Node Runtime APIs are listed and are compatible to Cells trough Runtime APIs. Global APIs are also compatible. The compatibility is listed below:
+The compatibility between Azion Runtime and Node.js is an ongoing task, but a set of Node Runtime APIs are listed and are compatible with Azion Edge Runtime trough Runtime APIs. Global APIs are also compatible. 
+
+The compatibility is listed below:
 
 ## Node built-in
 
-| Name                              | Type     | Support      |
-|-----------------------------------|----------|--------------|
-| [async_hooks](https://nodejs.org/api/async_hooks.html)                        | Object | `Partially`: Only AsyncLocalStorage and AsyncResource are implemented.      |
+### [async_hooks](https://nodejs.org/api/async_hooks.html)
+
+**Supported**: 🟡 Partially supported
+
+**Comments**: Only [AsyncLocalStorage](https://nodejs.org/api/async_context.html#class-asynclocalstorage) and [AsyncResource](https://nodejs.org/api/async_hooks.html#class-asyncresource) are implemented.
+
+---
 
 ## Globals
 
-| Name                              | Type     | Support      |
-|-----------------------------------|----------|--------------|
-| parseFloat                        | Function | Yes          |
-| parseInt                          | Function | Yes          |
-| Boolean                           | Function | Yes          |
-| String                            | Function | Yes          |
-| Symbol                            | Function | Yes          |
-| Date                              | Function | Yes          |
-| Promise                           | Function | Yes          |
-| RegExp                            | Function | Yes          |
-| Error                             | Function | Yes          |
-| AggregateError                    | Function | Yes          |
-| EvalError                         | Function | Yes          |
-| RangeError                        | Function | Yes          |
-| ReferenceError                    | Function | Yes          |
-| SyntaxError                       | Function | Yes          |
-| TypeError                         | Function | Yes          |
-| URIError                          | Function | Yes          |
-| ArrayBuffer                       | Object   | Yes          |
-| Uint8Array                        | Object   | Yes          |
-| Int8Array                         | Object   | Yes          |
-| Uint16Array                       | Object   | Yes          |
-| Int16Array                        | Object   | Yes          |
-| Uint32Array                       | Object   | Yes          |
-| Int32Array                        | Object   | Yes          |
-| Float32Array                      | Object   | Yes          |
-| Float64Array                      | Object   | Yes          |
-| Uint8ClampedArray                 | Object   | Yes          |
-| BigUint64Array                    | Object   | Yes          |
-| BigInt64Array                     | Object   | Yes          |
-| DataView                          | Object   | Yes          |
-| Map                               | Object   | Yes          |
-| BigInt                            | Object   | Yes          |
-| Set                               | Object   | Yes          |
-| WeakMap                           | Object   | Yes          |
-| WeakSet                           | Object   | Yes          |
-| Proxy                             | Object   | Yes          |
-| decodeURI                         | Function | Yes          |
-| decodeURIComponent                | Function | Yes          |
-| encodeURI                         | Function | Yes          |
-| encodeURIComponent                | Function | Yes          |
-| escape                            | Function | Yes   |
-| unescape                          | Function | Yes   |
-| isFinite                          | Function | Yes          |
-| isNaN                             | Function | Yes          |
-| Event                             | Function | Yes          |
-| EventTarget                       | Object   | Yes          |
-| CustomEvent                       | Function | Yes          |
-| dispatchEvent                     | Function | Yes          |
-| addEventListener                  | Function | Yes          |
-| removeEventListener               | Function | Yes          |
-| AbortSignal                       | Function | Yes          |
-| AbortController                   | Function | Yes          |
-| Blob                              | Function | Yes          |
-| Crypto                            | Object   | Yes          |
-| CryptoKey                         | Object   | Yes          |
-| DOMException                      | Object   | Yes          |
-| FormData                          | Function | Yes          |
-| Headers                           | Function | Yes          |
-| ReadableStream                    | Object   | Yes          |
-| ReadableStreamBYOBReader          | Function | Yes          |
-| ReadableStreamDefaultReader       | Function | Yes          |
-| Request                           | Function | Yes          |
-| Response                          | Function | Yes          |
-| SubtleCrypto                      | Object   | Yes          |
-| TextDecoder                       | Function | Yes          |
-| TextEncoder                       | Function | Yes          |
-| TransformStream                   | Function | Yes          |
-| URL                               | Function | Yes          |
-| URLPattern                        | Function | Yes          |
-| URLSearchParams                   | Function | Yes          |
-| WritableStream                    | Object   | Yes          |
-| WritableStreamDefaultWriter       | Function | Yes          |
-| atob                              | Function | Yes          |
-| btoa                              | Function | Yes          |
-| clearTimeout                      | Function | Yes          |
-| fetch                             | Function | Yes          |
-| setTimeout                        | Function | Yes          |
-| setInterval                       | Function | Yes          |
-| structuredClone                   | Function | Yes          |
-| ExtendableEvent                   | Function | Yes   |
-| FetchEvent                        | Function | Yes          |
-| FirewallEvent                     | Function | Yes   |
-| clearInterval                     | Function | Yes          |
-| SharedArrayBuffer                 | Object   | Yes          |
-| globalThis                        | Object   | Yes          |
-| JSON                              | Object   | Yes          |
-| Math                              | Object   | Yes          |
-| Intl                              | Object   | Yes          |
-| Reflect                           | Object   | Yes          |
-| console                           | Object   | Yes          |
-| crypto                            | Object   | Yes          |
-| self                              | Object   | Yes          |
-| Atomics                           | Object   | Yes          |
-| WebAssembly                       | Object   | Yes          |
-| Infinity                          | Number   | Yes          |
-| NaN                               | Number   | Yes          |
-| undefined (undefined)             | Others   | Yes          |
-| EdgeRuntime (string)              | Others   | Yes          |
 
-Please note that the "Support" column indicates whether these items are supported in Azion Edge Runtime.
+### parseFloat
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### parseInt
+
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Boolean
+
+
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### String
+
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Symbol
+
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Date
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Promise
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### RegExp
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Error
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### AggregateError
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### EvalError
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### RangeError
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### ReferenceError
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### SyntaxError
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### TypeError
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### URIError
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### ArrayBuffer
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Uint8Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Int8Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Uint16Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Int16Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Uint32Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Int32Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Float32Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Float64Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Uint8ClampedArray
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### BigUint64Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### BigInt64Array
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### DataView
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Map
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### BigInt
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Set
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### WeakMap
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### WeakSet
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Proxy
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### decodeURI
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### decodeURIComponent
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### encodeURI
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### encodeURIComponent
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### escape
+
+**Type**: escape
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### unescape
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### isFinite
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### isNaN
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Event
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### EventTarget
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### CustomEvent
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### dispatchEvent
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### addEventListener
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### removeEventListener
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### AbortSignal
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### AbortController
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Blob
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Crypto
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### CryptoKey
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### DOMException
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### FormData
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Headers
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### ReadableStream
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### ReadableStreamBYOBReader
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### ReadableStreamDefaultReader
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Request
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Response
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### SubtleCrypto
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### TextDecoder
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### TextEncoder
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### TransformStream
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### URL
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### URLPattern
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### URLSearchParams
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### WritableStream
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### WritableStreamDefaultWriter
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### atob
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### btoa
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### clearTimeout
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### fetch
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### setTimeout
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### setInterval
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### structuredClone
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### ExtendableEvent
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### FetchEvent
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### FirewallEvent
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### clearInterval
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### SharedArrayBuffer
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### globalThis
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### JSON
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Math
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Intl
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Reflect
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### console
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### crypto
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### self
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### Atomics
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### WebAssembly
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### undefined
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
+
+### EdgeRuntime
+
+**Supported**: 🟢 yes
+
+**Comments**: comments about compatibility
